feature. update react code freamwork.

--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -6,14 +6,12 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
-  <script src="//cdn.bootcss.com/jquery/2.2.1/jquery.min.js"></script>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style/index.css">
+  <!--<link rel="stylesheet" href="assets/style/index.css">-->
 </head>
 <body>
-  <div class="main">
-    <div class="container">
-      <div>X</div>
+  <div id="main">
+    <div id="container">
     </div>
   </div>
 </body>
