--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -5,14 +5,13 @@
 <!--<![endif]-->
 <head lang="en">
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
-  <!--<link rel="stylesheet" href="assets/style/index.css">-->
 </head>
 <body>
   <div id="main">
-    <div id="container">
-    </div>
   </div>
 </body>
 </html>
