--- a/root/src/index/index.scss
+++ b/root/src/index/index.scss
@@ -21,6 +21,25 @@ body {
     border: 0;
     vertical-align: middle;
     text-align: center;
+    .homepage-bg-mask {
+      pointer-events: none;
+      position: absolute;
+      opacity: 0;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      background: radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, .3));
+      .homepage-bg-mask-img {
+        pointer-events: none;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-origin: border-box;
+        background-position: center;
+        background-size: cover;
+      }
+    }
   }
   .velocity-span {
     position: absolute;
