--- a/root/src/components/contentChanger/contentChanger.scss
+++ b/root/src/components/contentChanger/contentChanger.scss
@@ -12,17 +12,9 @@
     text-align: center;
     cursor: pointer;
     color: #ABABA1;
+    transition: all ease 300ms;
   }
   .page-changer-anchor.active {
     color: rgb(251, 251, 239);
-  }
-}
-.page-changer {
-  
-  .page-changer-item {
-    // display: none;
-  }
-  .page-changer-item.active {
-    // display: block;
   }
 }
