--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
+  <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="main">
