--- a/root/src/index/pages/about/about.scss
+++ b/root/src/index/pages/about/about.scss
@@ -1,4 +1,94 @@
+$member_count: 3;
+$anime_delay: 100ms;
+
 .page-container.about {
   background: #ececec;
   color: #666;
+  padding: 20px 50px;
+  h1 {
+    padding: 20px 0;
+  }
+  .text1 {
+    width: 500px;
+    margin: 10px auto;
+    text-align: justify;
+  }
+  .text2 {
+    width: 500px;
+    margin: 10px auto;
+    text-align: right;
+    color: #aaa;
+  }
+  .members {
+    box-sizing: border-box;
+    padding: 0 100px;
+    margin: 50px 0 0 0;
+    .page-about-member {
+      float: left;
+      width: 100%/$member_count;
+      .avatar {
+        height: 120px;
+        width: 120px;
+        border-radius: 70px;
+        overflow: hidden;
+        margin: 0 auto;
+        img {
+          height: 120px;
+          width: 120px;
+        }
+      }
+      .name {
+        margin: 20px 0 10px 0;
+        color: #000;
+      }
+      i {
+        width: 40px;
+        margin: auto;
+        display: block;
+        height: 2px;
+        background: #000;
+      }
+      p {
+        margin: 10px auto 0;
+        max-width: 243px;
+        width: 100%;
+        color: #666;
+      }
+    }
+  }
+}
+
+// anime
+.page-container.about {
+  .page-about h1,
+  .text1,
+  .text2,
+  .page-about-member.SEKAI,
+  .page-about-member.FATE,
+  .page-about-member.YOU {
+    transform: translateY(20px);
+    opacity: 0;
+    transition: all 300ms ease;
+  }
+}
+body.about:not(.scrolling) {
+  .page-container.about {
+    .page-about h1,
+    .text1,
+    .text2,
+    .page-about-member.SEKAI,
+    .page-about-member.FATE,
+    .page-about-member.YOU {
+      transform: translateY(0);
+      opacity: 1;
+    }
+  }
+}
+.page-container.about {
+  .page-about h1 { transition-delay: 0 }
+  .text1 { transition-delay: $anime_delay*1 }
+  .text2 { transition-delay: $anime_delay*2 }
+  .page-about-member.SEKAI { transition-delay: $anime_delay*3 }
+  .page-about-member.FATE { transition-delay: $anime_delay*4 }
+  .page-about-member.YOU { transition-delay: $anime_delay*5 }
 }
