--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -3,7 +3,7 @@
 <!--[if (gt IE 10)|!(IE)]><!-->
 <html>
 <!--<![endif]-->
-<head lang="en">
+<head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
