--- a/root/src/index/pages/clothes/clothes.scss
+++ b/root/src/index/pages/clothes/clothes.scss
@@ -27,6 +27,14 @@ $anime_delay: 100ms;
               margin: 0 3px;
             }
           }
+          .custom-image {
+            border-bottom: 1px solid #e9e9e9;
+            height: 255px;
+            line-height: 255px;
+            img {
+              vertical-align: middle;
+            }
+          }
         }
 
         &.empty {
