--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -10,6 +10,7 @@
   <title>CLEVERIOUS -- Clever People with clever ideas --</title>
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
+  <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
 </head>
 <body>
   <div id="main">
