--- a/root/templates/index.html
+++ b/root/templates/index.html
@@ -11,6 +11,8 @@
   <link href="//cdn.bootcss.com/normalize/3.0.3/normalize.min.css" rel="stylesheet">
   <link href="//cdn.bootcss.com/antd/1.3.0/antd.min.css" rel="stylesheet">
   <script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+  <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+  <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
   <div id="main">
